# fastqx

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.env  README.md  cargo.toml  remark.md  todo.md
fastqx/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
fastqx-core/: Cargo.toml
fastqx-core/src/: lib.rs  utils.rs
fastqx-core/src/adt/: rough.rs  value.rs
fastqx-core/src/conn/: db.rs  mod.rs  rough.rs
fastqx-core/src/csv/: mod.rs
fastqx-core/src/sql/: conn.rs  dynm.rs  mod.rs  rowprocess.rs
fastqx-core/tests/: rough_data.rs  sql_sttm.rs  sql_sttm_dereive.rs  sql_sttm_derive.rs  sqlx_dyn.rs
fastqx-macros/: Cargo.toml
fastqx-macros/src/: decl.rs  dr.rs  helper.rs  lib.rs  sql.rs  sttm.rs
fastqx-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
fastqx-py/python/fastqx/: __init__.py  fastqx.pyi  helper.py  types.py
fastqx-py/python/fastqx/csv/: __init__.py  csv.pyi
fastqx-py/python/fastqx/http/: __init__.py  http.pyi
fastqx-py/python/fastqx/sql/: __init__.py  sql.pyi
fastqx-py/src/: csv.rs  data.rs  http.rs  lib.rs  py.rs  sql.rs
fastqx-py/src/d/: data.rs  idx.rs  mod.rs  ops.rs  utils.rs
fastqx-py/tests/: test_create_sql_query.py  test_csv.py  test_data.py  test_data2.py  test_data_cast.py  test_data_csv.py  test_data_dataclass.py  test_data_dataframe.py  test_data_objects.py  test_data_slice.py  test_data_x.py  test_fastqx_async.py  test_fastqx_conn.py  test_fastqx_mssql.py  test_fastqx_sync.py  test_http.py  test_mssql.py  test_mssql_conn.py  test_ops_agg.py  test_ops_apply.py  test_ops_filter.py  test_ops_fold.py  test_ops_group.py  test_ops_join.py  test_ops_merge.py  test_ops_reduce.py  test_ops_select.py  test_postgres.py  test_postgresql.py  test_postgresql_conn.py  test_row.py  test_sql_async.py  test_sql_conn.py  test_types.py
fastqx/python/fastqx/: __init__.py  fastqx.pyi
fastqx/src/: constant.rs  csv.rs  data.rs  helper.rs  lib.rs  py.rs  sql.rs  utils.rs
fastqx/src/adt/: abst.rs  constant.rs  cvt.rs  data.rs  datacow.rs  iter.rs  macros.rs  mod.rs  pydata.rs  row.rs  rowcow.rs  schema.rs  util.rs  value.rs
fastqx/src/adt/ab/: arith.rs  cvt.rs  d.rs  iter.rs  mod.rs  r.rs  s.rs
fastqx/src/adt/dat/: data.rs  datacow.rs  mod.rs
fastqx/src/adt/py/: mod.rs  pydata.rs  pyidx.rs  pyops.rs  pyrow.rs  pyvalue.rs  utils.rs
fastqx/src/adt/row/: mod.rs  row.rs  rowcow.rs
fastqx/src/adt/val/: cvt.rs  mod.rs  value.rs
fastqx/src/algo/: README.md  agg.rs  apply.rs  fold.rs  group.rs  mod.rs  select.rs  slice.rs
fastqx/src/conn/: db.rs
fastqx/src/csv/: read.rs  write.rs
fastqx/src/mock/: data.rs
fastqx/src/op/: README.md  agg.rs  apply.rs  fold.rs  group.rs  mod.rs  reduce.rs  select.rs  utils.rs
fastqx/src/ops/: README.md  agg.rs  apply.rs  cloned.rs  compare.rs  cumagg.rs  cvt.rs  filter.rs  fold.rs  group.rs  idx.rs  join.rs  lazy_group.rs  merge.rs  mod.rs  owned.rs  position.rs  reduce.rs  refd.rs  select.rs  slice.rs  sort.rs  utils.rs
fastqx/src/ops/mock/: data.rs  mod.rs
fastqx/src/sources/: adt.rs  mod.rs
fastqx/src/sources/csv/: mod.rs  read.rs  util.rs
fastqx/src/sources/http/: adt.rs  conn.rs  dynm.rs  mod.rs
fastqx/src/sources/sql/: ab.rs  adt.rs  conn.rs  dynm.rs  mod.rs  pysql.rs  rowprocess.rs
fastqx/src/sources/sql/sqx/: mod.rs  spool.rs  srow.rs
fastqx/src/sources/sql/tbr/: mod.rs  pool.rs  sqlbuild.rs  tpool.rs  trow.rs
fastqx/src/sql/: adt.rs  conn.rs  constant.rs  dynm.rs  mod.rs  rowprocess.rs
fastqx/src/sql/mssql/: mod.rs  pool.rs  row.rs  sqlbuild.rs
fastqx/src/sql/tbr/: pool.rs  sqlbuild.rs
fastqx/tests/: fqxdata.rs  mock_fqxcst.rs  mssql.rs  rnd.rs  rough_data.rs  sql_dynamic.rs  sql_static.rs  sql_sttm.rs  sql_sttm_derive.rs  sqlx_dyn.rs  struct2data.rs  test_data.py  test_fastqx.py  test_itertools.rs  test_sync_fastqx.py
