[package]
name = "fastqx-core"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"


[dependencies]
fastqx-macros = { path = "../fastqx-macros" }

anyhow = "1"
futures = "0"
sea-query = { version = "0", features = [
    "backend-mysql",
    "backend-postgres",
    "backend-sqlite",
] }
sqlx = { version = "0", features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "sqlite",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
once_cell = "1"
