[package]
name = "fastqx-py"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "fastqx"
crate-type = ["cdylib"]

[dependencies]
fastqx = { path = "../fastqx" }

anyhow = "1"
futures = "0"
log = "0"
pyo3 = { version = "0", features = [
    "anyhow",
    "extension-module",
    "multiple-pymethods",
] }
pyo3-log = "0"
pythonize = "0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# [target.x86_64-apple-darwin]
# rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

# [target.aarch64-apple-darwin]
# rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[build-dependencies]
pyo3-build-config = { version = "0", features = ["resolve-config"] }
