[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "fastqx"
version = "0.1.0"
authors = [{ name = "Jacob Xie", email = "jacobbishopxy@gmail.com" }]
description = "Fast query data from DB/CSV"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
# temporary disable this field to save compiling time
# dependencies = ["pandas>=1.0.0"]


[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "fastqx"
