[package]
name = "fastqx"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"


[dependencies]
fastqx-macros = { path = "../fastqx-macros" }

anyhow = "1"
async-trait = "0"
futures = "0"
sea-query = { version = "0", features = [
    "backend-mysql",
    "backend-postgres",
    "backend-sqlite",
] }
sqlx = { version = "0", features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "sqlite",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0", features = ["compat"] }
once_cell = "1"
pyo3 = { version = "0", features = ["anyhow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
bb8 = "0"
tiberius = { version = "0", default-features = false, features = ["tokio"] }
dotenv = "0"
