[package]
name = "fastqx"
authors = ["JacobX <jacobbishopxy@gmail.com>"]
version = "0.1.0"
edition = "2021"


[dependencies]
fastqx-macros = { path = "../fastqx-macros" }

anyhow = "1"
async-trait = "0"
bb8 = "0"
csv = "1"
chrono = { version = "0", features = ["serde"] }
dotenv = "0"
futures = "0"
sea-query = { version = "0", features = [
    "backend-mysql",
    "backend-postgres",
    "backend-sqlite",
    "with-chrono",
] }
sqlx = { version = "0", features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "sqlite",
    "chrono",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0", features = ["compat"] }
once_cell = "1"
pyo3 = { version = "0", features = ["anyhow", "multiple-pymethods"] }
pyo3-log = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiberius = { version = "0", default-features = false, features = [
    "tokio",
    "chrono",
    "tds73",
] }
ref-cast = "1"
reqwest = { version = "0", features = ["json"] }
itertools = "0"

[dev-dependencies]
mockall = "0"
